also fix tracker on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1013,6 +1013,13 @@ select {
     margin-bottom:0;
     text-align: center;
     }
+    .news h1 {
+    margin-top: 0.5em;
+    margin-left: 1em;
+    text-align: left;
+    width: 65%;
+    font-size: 20px;
+    }
 }
 
 @media only screen and (min-width: 956px) {
